Creating a controller with the corresponding html oage + add template boostrap + update Todo model and application.yml to fix error compilation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
-  profiles: default
 
-server:
-  port: 8080
+  output.ansi.enabled: ALWAYS
 
-mysql:
-  url: "jdbc:mysql://localhost:3306/todo_list_spring?serverTimezone=GMT"
-  username: sylene
-  password: my-db64B
+  datasource:
+    url: "jdbc:mysql://localhost:3306/todo_list_spring?serverTimezone=GMT"
+    username: sylene
+    password: my-db64B
+
+  jpa:
+    show-sql: true
+
+    hibernate.ddl-auto: update
